--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
 }
 
 nav ul {
